fetchからjavaに変えた。
shとかにしても良いな、そのうちバリエーションにするかも、